--- a/scss/media.scss
+++ b/scss/media.scss
@@ -152,7 +152,7 @@
     margin: 20px 0px 60px 100px;
   }
 }
-@media (max-width:768px){
+@media (min-width:768px){
   article {
     flex-direction: column;
   }
